--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        <main id="calculator">
+        <<main id="calculator">
             <div id="calculator-container">
                 <div id="display">0</div>
                 <button type="button" class="all-clear" value="allClear" data-key="8">AC</button>
                 <button type="button" class="clear" value="clear" data-key="8">C</button>
-                <button type="button" class="percent" value="percent" data-key="80">%</button>
+                <button type="button" class="operator" value="%" data-key="80">%</button>
                 <button type="button" class="operator" value="/" data-key="68">/</button>
                 <button type="button" class="operand" value="7" data-key="55">7</button>
                 <button type="button" class="operand" value="8" data-key="56">8</button>
@@ -26,7 +26,7 @@
                 <button type="button" class="operand" value="2" data-key="50">2</button>
                 <button type="button" class="operand" value="3" data-key="51">3</button>
                 <button type="button" class="operator" value="+" data-key="61">+</button>
-                <button type="button" id="zero" class="operand" value="0" data-key="48">0</button>
+                <button type="button" class="operand" value="0" data-key="48">0</button>
                 <button type="button" class="decimal" value="." data-key="190">.</button>
                 <button type="button" class="sign" value="sign" data-key="192">+/-</button>
                 <button type="button" class="equals" value="=" data-key="69">=</button>
