Add custom font Londrina outline and final code cleanup
Add font Londrina outline to title element of page.
Delete all console.log ()function calls and commented out
code from javascript.js file.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        <<main id="calculator">
+        <main id="calculator">
+            <div class="title">Hyper Calc</div>
             <div id="calculator-container">
                 <div id="display">0</div>
                 <button type="button" class="all-clear" value="allClear" data-key="8">AC</button>
